    and new access rights management method, core consist only core actions, added 'init', 'end'
    and 'install' core actions, and many other changes (alec)
  - added index on column 'dt' in table 'stats' - only in database structure
    initialization scripts (alec)
  - don't "blend" customers without nodes on Customers List (alec)

version 1.9.1 Jumar (2006-02-13):

  - BTS#0000488: fixed title on nodes list printout (alec)
  - BTS#0000487: fixed printing from Invoices List (alec)
  - BTS#0000486: added duplicate and fixed invoices printing in 
    Finance -> Print -> Invoices (alec)
  - added submit button in genfake interface (alec)
  - fixed solid payments accounting (alec)
  - fixed Liabilities Report: disposable and tariffless liabilities
    support, suspension and discount support, fixed sorting by value (alec)
  - fixes in reload when using reload_execcmd and reload_sqlquery with
    hosts (alec)
  - bugfix in perl scripts for 64-bit architectures (Jarek Dziubek)
  - BTS#0000495: fixed "Invalid argument..." error in liability report (alec)
  - fixed Cash Receipt List filtering by value (alec)
  - fixed error triggers in netadd and netedit (alec)
  - fixed network size checking in network edition (alec)
  - fixed warning in NetworkCompress() function (alec)
  - Cash Registry: registries management, user per-registry access rights,
    cash-in/cash-out receipts (alec)
  - customer documents edition and confirmation (alec)
  - added document type 'order' (alec)
  - added customers searching by creation or deletion dates (alec)
  - fixed credit notes printing from customer balance box (alec)
  - lms-rtparser: added support for multipart/alternative messages, fixed
    problem with attachements with spaces and unknown/forbidden characters 
    in filename (alec)
  - cash documents extended numbering (alec)
  - changed look of balance lists: columns Liability, Income, Expense (alec)
  - automatic first deficient period settlement (alec)